--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,6 +48,7 @@ p {
 .big-heading {
   font-size: 3.5rem;
   font-style: oblique;
+  text-align: left;
 }
 
 .download-btn {
@@ -60,8 +62,9 @@ p {
   right: 30%;
 }
 
-@media (max-width: 1024px) {
-  .intro {
+
+@media (max-width: 900px) {
+  .big-heading,.iphone6 {
     text-align: center;
   }
 
@@ -75,7 +78,6 @@ p {
 .features-icons {
   color: #ef8172;
   font-size: 3rem;
-  text-align: center;
   margin: 5% 15%;
 }
 
@@ -86,10 +88,8 @@ p {
   font-size: 2rem;
 }
 .features-main {
-  margin-left: 120px;
-  margin-right: 0;
+  margin: 0 100px;
   padding: 10% 0;
-  text-align: center;
   background-color: white;
   position: relative;
   z-index: 1;
@@ -106,7 +106,6 @@ p {
 #testimonials{
   background-color: #ef8172;
   color: #fff;
-  text-align: center;
 }
 
 .testimonial-img {
@@ -127,7 +126,6 @@ p {
 /* press */
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding: 5%;
 }
 
@@ -139,7 +137,6 @@ p {
 /* pricing */
 #pricing {
   padding: 3%;
-  text-align: center;
 }
 
 .dog-name{
@@ -170,7 +167,6 @@ p {
 
 /* cta-section */
 #cta {
-  text-align: center;
   background-color: #ff2d4e;
   padding: 5% 15%;
   color: #fff;
@@ -181,7 +177,6 @@ p {
 
 /* footer */
 #footer {
-  text-align: center;
   font-size: .7rem;
   padding: 20px 0;
 }
