--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Montserrat-Black"sans-serif;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -75,14 +81,13 @@ p {
 
 /* features */
 
-#features {
+.features-main {
   text-align: center;
   background-color: white;
   position: relative;
-  left: 5%;
+  left: 7%;
   padding: 7% 3%;
   z-index: 1;
-  float: center;
 }
 
 .features-icons {
@@ -106,6 +111,16 @@ p {
 @media (max-width : 959px) {
   .features-text{
     font-size: 1.5rem;
+  }
+.features-main{
+    margin: 0;
+    position: relative;
+    left: 0;
+  }
+  .features-main{
+    padding: 20px;
+    margin: 0;
+
   }
 }
 
